# claudeStockTrader

./: .gitignore  CLAUDE.md  PRD.md  README.md  YOUTUBE.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  config.py  logging_config.py  main.py  middleware.py  pyproject.toml  seed_data.py
backend/brain/: __init__.py  ab_testing.py  claude_client.py  correlations.py  decision_pipeline.py  ensemble.py  market_intel.py  market_regime.py  risk_manager.py  session_filter.py
backend/data/: candle_ingestion.py  feed.py
backend/database/: __init__.py  connection.py  deps.py  models.py
backend/database/repositories/: __init__.py  ab_tests.py  backtests.py  candles.py  correlations.py  decisions.py  performance.py  risk.py  signals.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_ab_test_runs.py  003_correlation_data.py
backend/optimisation/: __init__.py  monte_carlo.py  reoptimiser.py  walk_forward.py
backend/routers/: __init__.py  ab_tests.py  candles.py  decisions.py  health.py  performance.py  risk.py  signals.py  websocket.py
backend/scheduler/: __init__.py  jobs.py  signal_resolver.py
backend/schemas/: __init__.py  ab_test.py  candle.py  decision.py  health.py  performance.py  risk.py  signal.py
backend/strategies/: __init__.py  base.py  breakout_expansion.py  confidence.py  ema_momentum.py  indicators.py  liquidity_sweep.py  runner.py  trend_continuation.py
backend/tests/: conftest.py
backend/tests/test_brain/: test_ab_testing.py  test_correlations.py  (+6 more)
backend/utils/: __init__.py  retry.py
(+67 files in other folders)
