[project]
name = "claude-stock-trader"
version = "0.1.0"
description = "AI-assisted gold (XAU/USD) trading system"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.2",
    "pydantic==2.12.5",
    "pydantic-settings>=2.7.0",
    "asyncpg==0.31.0",
    "sqlalchemy==2.0.48",
    "apscheduler==3.11.2",
    "redis>=5.0.0",
    "anthropic>=0.50.0",
    "uvicorn[standard]>=0.34.0",
    "alembic>=1.15.0",
    "httpx>=0.28.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["..", "."]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
